<resources>
    <string name="app_name">Point of Sale</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="hint_price">Item Price</string>
    <string name="hint_name">Item Name</string>
    <string name="submit">Submit Item</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>
