<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:focusableInTouchMode="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/add_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:focusableInTouchMode="true"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>